src/components/dimension-modal/conditions-modal-content/styles/condition.module.css
.container {
    display: inline-flex;
    align-items: flex-start;
    max-block-size: 32px;
    overflow: hidden;
}

.container:not(.checkboxContainer):hover {
    box-shadow:
        0 1px 5px rgba(12, 12, 12, 0.05),
        0 0 40px rgba(12, 12, 12, 0.015);
    border-radius: 3px;
}

.container:last-child {
    margin-block-end: var(--spacers-dp12);
}

.caseSensitiveCheckbox {
    flex-shrink: 0;
    block-size: 32px;
    padding: 0 var(--spacers-dp4);
    background-color: var(--colors-white);
    border-block-start: 1px solid var(--colors-grey500);
    border-block-end: 1px solid var(--colors-grey500);
}

.checkboxOption {
    margin-inline-end: var(--spacers-dp16);
}

.operatorSelect {
    flex: 0 0 auto;
    max-inline-size: 240px;
}

.operatorSelect :global(.root) {
    border-radius: 3px 0 0 3px !important;
    border-inline-end: none !important;
}

.legendSelect,
.textInput {
    flex: 2 1 auto;
}

.textInput :global(input) {
    border-radius: 0 !important;
}

.legendSelect :global(.root) {
    border-radius: 0 !important;
    border-inline-end: none !important;
}

.legendSetSelect {
    flex: 0 0 auto;
}

.legendSetSelect :global(.root) {
    border-radius: 0 !important;
    border-inline-end: none !important;
}

.dateInput,
.numericInput {
    flex: 0 1 auto;
    min-inline-size: 120px;
    inline-size: fit-content !important;
}

.dateInput :global(input),
.numericInput :global(input) {
    min-inline-size: 120px !important;
    inline-size: fit-content !important;
    border-radius: 0 !important;
    border-inline-end: none !important;
}

.phoneNumberInput {
    min-inline-size: 200px;
}

.phoneNumberInput :global(input) {
    border-radius: 0 !important;
}

.letterInput {
    min-inline-size: 100px;
}

.letterInput :global(input) {
    border-radius: 0 !important;
}

.removeButton {
    flex: 0 0 auto;
    margin-inline-start: 0;
    inline-size: 24px !important;
    block-size: 32px !important;
    padding: 0 !important;
    border: 1px solid var(--colors-grey500) !important;
    border-radius: 0 3px 3px 0 !important;
    background: transparent !important;
    color: var(--colors-grey600) !important;
}

.removeButton :global(.button-icon) {
    margin-inline-end: 0 !important;
}

.removeButton:hover,
.removeButton:active {
    background-color: var(--colors-red050) !important;
    color: var(--colors-red700) !important;
    border-color: var(--colors-red800) !important;
}

.removeButton:focus {
    outline: 3px solid var(--theme-focus) !important;
    outline-offset: -3px;
}

.removeButton:focus:not(:focus-visible) {
    outline: none !important;
}

